website/i18n/zh-hant/docusaurus-plugin-content-docs/version-3.1.1/deployment.mdx
---
description: Deploy your Docusaurus app for production on a range of static site hosting services.
---

# 部署

要為生產環境建置網站的靜態檔案，請執行：

```bash npm2yarn
npm run build
```

完成後，靜態檔案將生成於 `build` 目錄中。

:::note

Docusaurus 的唯一職責是建置您的網站並在 `build` 目錄中生成靜態檔案。

如何託管這些靜態檔案現在由您決定。

:::

您可以將網站部署到靜態網站託管服務，例如 [Vercel](https://vercel.com/)、[GitHub Pages](https://pages.github.com/)、[Netlify](https://www.netlify.com/)、[Render](https://render.com/docs/static-sites) 和 [Surge](https://surge.sh/help/getting-started-with-surge)。

Docusaurus 網站是靜態渲染的，通常可以在沒有 JavaScript 的情況下運作！

## 配置 {#configuration}

以下參數在 `docusaurus.config.js` 中是必需的，以優化路由並從正確的位置提供檔案：

| Name | Description |
| --- | --- |
| `url` | URL for your site. For a site deployed at `https://my-org.com/my-project/`, `url` is `https://my-org.com/`. |
| `baseUrl` | Base URL for your project, with a trailing slash. For a site deployed at `https://my-org.com/my-project/`, `baseUrl` is `/my-project/`. |

## 本地測試建置 {#testing-build-locally}

在部署到生產環境之前，本地測試建置非常重要。Docusaurus 提供了 [`docusaurus serve`](cli.mdx#docusaurus-serve-sitedir) 命令來實現這一點：

```bash npm2yarn
npm run serve
```

預設情況下，這將在 [`http://localhost:3000/`](http://localhost:3000/) 載入您的網站。

## 尾斜線配置 {#trailing-slashes}

Docusaurus 有一個 [`trailingSlash` 配置](./api/docusaurus.config.js.mdx#trailingSlash)，允許自訂 URL/連結和生成的文件名模式。

預設值通常運作良好。不幸的是，每個靜態託管提供者都有**不同的行為**，將相同的網站部署到不同的主機可能會導致不同的結果。根據您的主機，更改此配置可能很有用。

:::tip

使用 [slorber/trailing-slash-guide](https://github.com/slorber/trailing-slash-guide) 來更好地理解您主機的行為，並適當配置 `trailingSlash`。

:::

## 使用環境變數 {#using-environment-variables}

將潛在敏感資訊放在環境中是常見的做法。然而，在典型的 Docusaurus 網站中，`docusaurus.config.js` 文件是唯一與 Node.js 環境交互的界面（參見[我們的架構概述](advanced/architecture.mdx)），而其他所有內容（MDX 頁面、React 組件等）都是客戶端，無法直接訪問 `process` 全局變量。在這種情況下，您可以考慮使用 [`customFields`](api/docusaurus.config.js.mdx#customFields) 將環境變數傳遞到客戶端。

```js title="docusaurus.config.js"
// If you are using dotenv (https://www.npmjs.com/package/dotenv)
import 'dotenv/config';

export default {
  title: '...',
  url: process.env.URL, // You can use environment variables to control site specifics as well
  // highlight-start
  customFields: {
    // Put your custom environment here
    teamEmail: process.env.EMAIL,
  },
  // highlight-end
};
```

```jsx title="home.jsx"
import useDocusaurusContext from '@docusaurus/useDocusaurusContext';

export default function Home() {
  const {
    siteConfig: {customFields},
  } = useDocusaurusContext();
  return <div>Contact us through {customFields.teamEmail}!</div>;
}
```

## 選擇託管提供者 {#choosing-a-hosting-provider}

有幾種常見的託管選項：

- [自託管](#self-hosting) 使用如 Apache2 或 Nginx 的 HTTP 伺服器。
- Jamstack 提供者（例如 [Netlify](#deploying-to-netlify) 和 [Vercel](#deploying-to-vercel)）。我們將以它們為參考，但相同的邏輯可以應用於其他提供者。
- [GitHub Pages](#deploying-to-github-pages)（根據定義，它也是 Jamstack，但我們將其單獨比較）。

如果不確定選擇哪一個，請考慮以下問題：

<details>

<summary>
  How many resources (money, person-hours, etc.) am I willing to invest in this?
</summary>

- 🔴 Self-hosting requires experience in networking as well as Linux and web server administration. It's the most difficult option, and would require the most time to manage successfully. Expense-wise, cloud services are almost never free, and purchasing/deploying an onsite server can be even more costly.
- 🟢 Jamstack providers can help you set up a working website in almost no time and offers features like server-side redirects that are easily configurable. Many providers offer generous build-time quotas even for free plans that you would almost never exceed. However, free plans have limits, and you would need to pay once you hit those limits. Check the pricing page of your provider for details.
- 🟡 The GitHub Pages deployment workflow can be tedious to set up. (Evidence: see the length of [Deploying to GitHub Pages](#deploying-to-github-pages)!) However, this service (including build and deployment) is always free for public repositories, and we have detailed instructions to help you make it work.

</details>

<details>

<summary>How much server-side customization do I need?</summary>

- 🟢 With self-hosting, you have access to the entire server's configuration. You can configure the virtual host to serve different content based on the request URL, you can do complicated server-side redirects, you can implement authentication, and so on. If you need a lot of server-side features, self-host your website.
- 🟡 Jamstack usually offers some server-side configuration (e.g. URL formatting (trailing slashes), server-side redirects, etc.).
- 🔴 GitHub Pages doesn't expose server-side configuration besides enforcing HTTPS and setting CNAME records.

</details>

<details>

<summary>Do I need collaboration-friendly deployment workflows?</summary>

- 🟡 Self-hosted services can leverage continuous deployment functionality like Netlify, but more heavy-lifting is involved. Usually, you would designate a specific person to manage the deployment, and the workflow wouldn't be very git-based as opposed to the other two options.
- 🟢 Netlify and Vercel have deploy previews for every pull request, which is useful for a team to review work before merging to production. You can also manage a team with different member access to the deployment.
- 🟡 GitHub Pages cannot do deploy previews in a non-convoluted way. One repo can only be associated with one site deployment. On the other hand, you can control who has write access to the site's deployment.

</details>

沒有一個萬能的解決方案。您需要根據需求和資源權衡後做出選擇。

## 自架主機 {#self-hosting}

Docusaurus 可使用 [`docusaurus serve`](cli.mdx#docusaurus-serve-sitedir) 進行自架。透過 `--port` 變更連接埠，或使用 `--host` 變更主機位址。

```bash npm2yarn
npm run serve -- --build --port 80 --host 0.0.0.0
```

:::warning

相較於靜態託管服務/CDN，此並非最佳選擇。

:::

:::warning

以下章節將介紹常見託管服務商及其針對 Docusaurus 站點的最佳部署配置方式。Docusaurus 與這些服務無商業合作關係，此處資訊僅供參考。部分說明由第三方提供，最新 API 變動可能未即時反映。若發現內容過時，歡迎提交 PR 修正。

由於我們僅能提供有限度的維護支援，目前已停止接受新增託管選項的 PR。您可將教學發布於其他平台（如個人部落格或服務商官網），並提請我們加入相關連結。

:::

## 部署至 Netlify {#deploying-to-netlify}

要將 Docusaurus 站點部署至 [Netlify](https://www.netlify.com/)，請先確認以下設定已正確配置：

```js title="docusaurus.config.js"
export default {
  // highlight-start
  url: 'https://docusaurus-2.netlify.app', // Url to your site with no trailing slash
  baseUrl: '/', // Base directory of your site relative to your repo
  // highlight-end
  // ...
};
```

接著透過 [Netlify 建立站點](https://app.netlify.com/start)。

設定站點時，請依下列方式指定建置指令與目錄：

- 建置指令：`npm run build`
- 發布目錄：`build`

若未預先配置這些建置選項，仍可於站點建立後至「Site settings」→「Build & deploy」進行設定。

完成上述配置後，站點將自動部署，並在程式碼合併至部署分支（預設為 `main`）時觸發重新部署。

:::warning

部分 Docusaurus 站點將 `docs` 目錄置於 `website` 外層（多為舊版 Docusaurus v1 的結構）：

```bash
repo           # git 根目錄
├── docs       # Markdown 檔案
└── website    # Docusaurus 根目錄
```

若選擇將 `website` 目錄設為 Netlify 的基礎目錄，當 `docs` 目錄更新時 Netlify 不會觸發建置，此時需配置 [自訂 `ignore` 指令](https://docs.netlify.com/configure-builds/common-configurations/ignore-builds/)：

```toml title="website/netlify.toml"
[build]
  ignore = "git diff --quiet $CACHED_COMMIT_REF $COMMIT_REF . ../docs/"
```

:::

:::warning

Netlify 預設會為 Docusaurus URL 添加尾部斜線。

建議停用 Netlify 設定中的 `Post Processing > Asset Optimization > Pretty Urls` 以避免小寫化 URL、非必要重新導向及 404 錯誤。

**請特別注意**：全域選項 `Disable asset optimization` 存在缺陷，實際上無法停用 `Pretty URLs` 設定。請務必獨立取消勾選此項目。

若需保留 Netlify 的 `Pretty Urls` 設定，請相應調整 Docusaurus 的 `trailingSlash` 配置。

詳見 [slorber/trailing-slash-guide](https://github.com/slorber/trailing-slash-guide)。

:::

## 部署至 Vercel {#deploying-to-vercel}

將 Docusaurus 專案部署至 [Vercel](https://vercel.com/) 可獲得[多重優勢](https://vercel.com/)，包含效能提升與操作簡化。

要透過 [Vercel 的 Git 整合功能](https://vercel.com/docs/concepts/git)部署專案，請先確保程式碼已推送至 Git 儲存庫。

透過 [導入流程](https://vercel.com/import/git) 將專案導入 Vercel。在導入過程中，您會發現所有相關選項都已預先配置完成；不過，您仍可選擇變更任何這些 [選項](https://vercel.com/docs/build-step#build-&-development-settings)。

專案導入後，所有後續推送至分支的動作都會產生 [預覽部署](https://vercel.com/docs/platform/deployments#preview)，而對 [生產分支](https://vercel.com/docs/git-integrations#production-branch)（通常是 "main" 或 "master"）的任何變更都會觸發 [生產環境部署](https://vercel.com/docs/platform/deployments#production)。

## 部署至 GitHub Pages {#deploying-to-github-pages}

Docusaurus 提供簡便的方式來發布至 [GitHub Pages](https://pages.github.com/)，此服務隨附於每個 GitHub 儲存庫且完全免費。

### 概覽 {#github-pages-overview}

通常發布流程會涉及兩個儲存庫（或至少兩個分支）：包含原始碼檔案的分支，以及包含要透過 GitHub Pages 服務之建置輸出的分支。在以下教學中，將分別稱它們為「來源」和「部署」。

每個 GitHub 儲存庫都關聯一個 GitHub Pages 服務。若部署儲存庫名為 `my-org/my-project`（其中 `my-org` 為組織名稱或使用者名稱），部署後的網站將出現在 `https://my-org.github.io/my-project/`。若部署儲存庫名為 `my-org/my-org.github.io`（即 _組織 GitHub Pages 儲存庫_），網站則會出現在 `https://my-org.github.io/`。

:::info

若您想為 GitHub Pages 使用自訂網域，請在 `static` 目錄中建立一個 `CNAME` 檔案。`static` 目錄內的所有內容都會被複製到部署用的 `build` 目錄根目錄。使用自訂網域時，您應能將 `baseUrl: '/projectName/'` 改回 `baseUrl: '/'`，並將 `url` 設為您的自訂網域。

更多細節可參考 GitHub Pages 文件中的 [使用者、組織與專案頁面](https://help.github.com/en/articles/user-organization-and-project-pages)。

:::

GitHub Pages 會從預設分支（通常為 `master` 或 `main`）或 `gh-pages` 分支，以及根目錄或 `/docs` 資料夾中擷取部署就緒的檔案（即 `docusaurus build` 的輸出）。您可透過儲存庫中的 `Settings > Pages` 進行配置。此分支將稱為「部署分支」。

我們提供 `docusaurus deploy` 指令，協助您透過單一指令將網站從來源分支部署至部署分支：包含克隆、建置與提交。

### `docusaurus.config.js` 設定 {#docusaurusconfigjs-settings}

首先，修改您的 `docusaurus.config.js` 並加入以下參數：

| Name | Description |
| --- | --- |
| `organizationName` | The GitHub user or organization that owns the deployment repository. |
| `projectName` | The name of the deployment repository. |
| `deploymentBranch` | The name of the deployment branch. It defaults to `'gh-pages'` for non-organization GitHub Pages repos (`projectName` not ending in `.github.io`). Otherwise, it needs to be explicit as a config field or environment variable. |

這些欄位也有對應的環境變數版本，且優先級更高：`ORGANIZATION_NAME`、`PROJECT_NAME` 和 `DEPLOYMENT_BRANCH`。

:::warning

GitHub Pages 預設會為 Docusaurus URL 加上尾部斜線。建議設定 `trailingSlash` 配置（設為 `true` 或 `false`，而非 `undefined`）。

:::

範例：

```js title="docusaurus.config.js"
export default {
  // ...
  url: 'https://endiliey.github.io', // Your website URL
  baseUrl: '/',
  // highlight-start
  projectName: 'endiliey.github.io',
  organizationName: 'endiliey',
  trailingSlash: false,
  // highlight-end
  // ...
};
```

:::warning

預設情況下，GitHub Pages 會透過 [Jekyll](https://jekyllrb.com/) 處理發布的檔案。由於 Jekyll 會捨棄任何以 `_` 開頭的檔案，建議您在 `static` 目錄中加入一個名為 `.nojekyll` 的空檔案來停用 Jekyll。

:::

### 環境設定 {#environment-settings}

| Name | Description |
| --- | --- |
| `USE_SSH` | Set to `true` to use SSH instead of the default HTTPS for the connection to the GitHub repo. If the source repo URL is an SSH URL (e.g. `git@github.com:facebook/docusaurus.git`), `USE_SSH` is inferred to be `true`. |
| `GIT_USER` | The username for a GitHub account that **has push access to the deployment repo**. For your own repositories, this will usually be your GitHub username. Required if not using SSH, and ignored otherwise. |
| `GIT_PASS` | Personal access token of the git user (specified by `GIT_USER`), to facilitate non-interactive deployment (e.g. continuous deployment) |
| `CURRENT_BRANCH` | The source branch. Usually, the branch will be `main` or `master`, but it could be any branch except for `gh-pages`. If nothing is set for this variable, then the current branch from which `docusaurus deploy` is invoked will be used. |
| `GIT_USER_NAME` | The `git config user.name` value to use when pushing to the deployment repo |
| `GIT_USER_EMAIL` | The `git config user.email` value to use when pushing to the deployment repo |

GitHub Enterprise 安裝應以相同方式運作；您只需將組織的 GitHub Enterprise 主機設為環境變數：

| Name          | Description                                     |
| ------------- | ----------------------------------------------- |
| `GITHUB_HOST` | The domain name of your GitHub enterprise site. |
| `GITHUB_PORT` | The port of your GitHub enterprise site.        |

### 部署 {#deploy}

最後，要將網站部署到 GitHub Pages，請執行：

```mdx-code-block
<Tabs>
<TabItem value="bash" label="Bash">
```

```bash
GIT_USER=<GITHUB_USERNAME> yarn deploy
```

```mdx-code-block
</TabItem>
<TabItem value="windows" label="Windows">
```

```batch
cmd /C "set "GIT_USER=<GITHUB_USERNAME>" && yarn deploy"
```

```mdx-code-block
</TabItem>
<TabItem value="powershell" label="PowerShell">
```

```powershell
cmd /C 'set "GIT_USER=<GITHUB_USERNAME>" && yarn deploy'
```

```mdx-code-block
</TabItem>
</Tabs>
```

:::warning

自 2021 年 8 月起，GitHub 要求所有命令行登入都必須使用**個人存取權杖 (PAT)** 而非密碼。當 GitHub 提示輸入密碼時，請改為輸入 PAT。詳情請參閱 [GitHub 文件](https://docs.github.com/en/authentication/keeping-your-account-and-data-secure/creating-a-personal-access-token)。

或者，您也可以使用 SSH（`USE_SSH=true`）登入。

:::

### 使用 GitHub Actions 觸發部署 {#triggering-deployment-with-github-actions}

[GitHub Actions](https://help.github.com/en/actions) 讓您可以直接在儲存庫中自動化、自訂並執行軟體開發工作流程。

以下工作流程範例假設您的網站原始碼位於儲存庫的 `main` 分支（_來源分支_ 為 `main`），且您的 [發布來源](https://help.github.com/en/github/working-with-github-pages/configuring-a-publishing-source-for-your-github-pages-site) 設定為 `gh-pages` 分支（_部署分支_ 為 `gh-pages`）。

我們的目標是：

1. 當有新的 pull request 提交到 `main` 時，執行一個確保網站能成功建置的動作，但不會實際部署。此工作稱為 `test-deploy`。
2. 當 pull request 合併到 `main` 分支或有人直接推送至 `main` 分支時，將會建置並部署到 `gh-pages` 分支。之後，新的建置輸出將會在 GitHub Pages 網站上提供。此工作稱為 `deploy`。

以下是兩種使用 GitHub Actions 部署文件的方法。根據您的部署分支（`gh-pages`）位置，選擇下方相關的標籤：

- 來源儲存庫和部署儲存庫為**同一個**儲存庫。
- 部署儲存庫是一個**遠端**儲存庫，與來源不同。

```mdx-code-block
<Tabs>
<TabItem value="same" label="Same">
```

雖然您可以將兩個工作定義在同一個工作流程檔案中，但原始的 `deploy` 工作流程在 PR 檢查套件狀態中總是會顯示為已跳過，這並不能反映實際狀態，也對審查過程沒有幫助。因此，我們建議將它們分開管理為不同的工作流程。

我們將使用一個受歡迎的第三方部署動作：[peaceiris/actions-gh-pages](https://github.com/peaceiris/actions-gh-pages#%EF%B8%8F-docusaurus)。

<details>
<summary>GitHub action files</summary>

Add these two workflow files:

:::warning[Tweak the parameters for your setup]

These files assume you are using Yarn. If you use npm, change `cache: yarn`, `yarn install --frozen-lockfile`, `yarn build` to `cache: npm`, `npm ci`, `npm run build` accordingly.

If your Docusaurus project is not at the root of your repo, you may need to configure a [default working directory](https://docs.github.com/en/actions/using-workflows/workflow-syntax-for-github-actions#example-set-the-default-shell-and-working-directory), and adjust the paths accordingly.

:::

```yml title=".github/workflows/deploy.yml"
name: Deploy to GitHub Pages

on:
  push:
    branches:
      - main
    # Review gh actions docs if you want to further define triggers, paths, etc
    # https://docs.github.com/en/actions/using-workflows/workflow-syntax-for-github-actions#on

permissions:
  contents: write

jobs:
  deploy:
    name: Deploy to GitHub Pages
    runs-on: ubuntu-latest
    steps:
      - uses: actions/checkout@v4
        with:
          fetch-depth: 0
      - uses: actions/setup-node@v4
        with:
          node-version: 18
          cache: yarn

      - name: Install dependencies
        run: yarn install --frozen-lockfile
      - name: Build website
        run: yarn build

      # Popular action to deploy to GitHub Pages:
      # Docs: https://github.com/peaceiris/actions-gh-pages#%EF%B8%8F-docusaurus
      - name: Deploy to GitHub Pages
        uses: peaceiris/actions-gh-pages@v3
        with:
          github_token: ${{ secrets.GITHUB_TOKEN }}
          # Build output to publish to the `gh-pages` branch:
          publish_dir: ./build
          # The following lines assign commit authorship to the official
          # GH-Actions bot for deploys to `gh-pages` branch:
          # https://github.com/actions/checkout/issues/13#issuecomment-724415212
          # The GH actions bot is used by default if you didn't specify the two fields.
          # You can swap them out with your own user credentials.
          user_name: github-actions[bot]
          user_email: 41898282+github-actions[bot]@users.noreply.github.com
```

```yml title=".github/workflows/test-deploy.yml"
name: Test deployment

on:
  pull_request:
    branches:
      - main
    # Review gh actions docs if you want to further define triggers, paths, etc
    # https://docs.github.com/en/actions/using-workflows/workflow-syntax-for-github-actions#on

jobs:
  test-deploy:
    name: Test deployment
    runs-on: ubuntu-latest
    steps:
      - uses: actions/checkout@v4
        with:
          fetch-depth: 0
      - uses: actions/setup-node@v4
        with:
          node-version: 18
          cache: yarn

      - name: Install dependencies
        run: yarn install --frozen-lockfile
      - name: Test build website
        run: yarn build
```

</details>

```mdx-code-block
</TabItem>
<TabItem value="remote" label="Remote">
```

跨儲存庫的發布設定較為困難，因為您需要有權限推送至另一個儲存庫。我們將使用 SSH 進行身份驗證。

1. 生成一個新的 [SSH 金鑰](https://help.github.com/en/github/authenticating-to-github/generating-a-new-ssh-key-and-adding-it-to-the-ssh-agent)。由於此 SSH 金鑰將用於 CI 環境，請確保不要輸入任何密碼。
2. 預設情況下，您的公鑰應創建於 `~/.ssh/id_rsa.pub`；否則，請使用上一步驟中提供的名稱將金鑰添加到 [GitHub 部署金鑰](https://developer.github.com/v3/guides/managing-deploy-keys/)。
3. 使用 `pbcopy < ~/.ssh/id_rsa.pub` 將金鑰複製到剪貼簿，並將其作為 [部署金鑰](https://developer.github.com/v3/guides/managing-deploy-keys/#deploy-keys) 貼到部署儲存庫中。如果命令列無法使用，請直接複製檔案內容。在保存部署金鑰前，勾選 `允許寫入權限` 選項。
4. 您需要將私鑰設為 [GitHub 秘密](https://help.github.com/en/actions/configuring-and-managing-workflows/creating-and-storing-encrypted-secrets)，以允許 Docusaurus 為您執行部署。
5. 使用 `pbcopy < ~/.ssh/id_rsa` 複製您的私鑰，並在原始儲存庫上創建一個名為 `GH_PAGES_DEPLOY` 的 GitHub 秘密。如果命令列無法使用，請直接複製檔案內容。保存您的秘密。
6. 在 `.github/workflows/` 目錄中創建您的 [文件工作流程](https://docs.github.com/en/actions/use-cases-and-examples/creating-an-example-workflow)。在此範例中，它是 `deploy.yml` 檔案。

至此，您應該具備：

- 原始儲存庫：已設置 GitHub 工作流程，並將私鑰 SSH 金鑰設為 GitHub 秘密
- 部署儲存庫：已在 GitHub 部署金鑰中設置公鑰 SSH 金鑰

<details>

<summary>GitHub action file</summary>

:::warning

Please make sure that you replace `actions@github.com` with your GitHub email and `gh-actions` with your name.

This file assumes you are using Yarn. If you use npm, change `cache: yarn`, `yarn install --frozen-lockfile`, `yarn build` to `cache: npm`, `npm ci`, `npm run build` accordingly.

:::

```yml title=".github/workflows/deploy.yml"
name: Deploy to GitHub Pages

on:
  pull_request:
    branches: [main]
  push:
    branches: [main]

permissions:
  contents: write

jobs:
  test-deploy:
    if: github.event_name != 'push'
    runs-on: ubuntu-latest
    steps:
      - uses: actions/checkout@v4
        with:
          fetch-depth: 0
      - uses: actions/setup-node@v4
        with:
          node-version: 18
          cache: yarn
      - name: Install dependencies
        run: yarn install --frozen-lockfile
      - name: Test build website
        run: yarn build
  deploy:
    if: github.event_name != 'pull_request'
    runs-on: ubuntu-latest
    steps:
      - uses: actions/checkout@v4
        with:
          fetch-depth: 0
      - uses: actions/setup-node@v4
        with:
          node-version: 18
          cache: yarn
      - uses: webfactory/ssh-agent@v0.5.0
        with:
          ssh-private-key: ${{ secrets.GH_PAGES_DEPLOY }}
      - name: Deploy to GitHub Pages
        env:
          USE_SSH: true
        run: |
          git config --global user.email "actions@github.com"
          git config --global user.name "gh-actions"
          yarn install --frozen-lockfile
          yarn deploy
```

</details>

```mdx-code-block
</TabItem>
</Tabs>
```

<details>

<summary>Site not deployed properly?</summary>

After pushing to main, if you don't see your site published at the desired location (for example, it says "There isn't a GitHub Pages site here", or it's showing your repo's README.md file), try the following:

- Wait about three minutes and refresh. It may take a few minutes for GitHub pages to pick up the new files.
- Check your repo's landing page for a little green tick next to the last commit's title, indicating the CI has passed. If you see a cross, it means the build or deployment failed, and you should check the log for more debugging information.
- Click on the tick and make sure you see a "Deploy to GitHub Pages" workflow. Names like "pages build and deployment / deploy" are GitHub's default workflows, indicating your custom deployment workflow failed to be triggered at all. Make sure the YAML files are placed under the `.github/workflows` folder, and that the trigger condition is set correctly (e.g., if your default branch is "master" instead of "main", you need to change the `on.push` property).
- Under your repo's Settings > Pages, make sure the "Source" (which is the source for the _deployment_ files, not "source" as in our terminology) is set to "gh-pages" + "/ (root)", since we are using `gh-pages` as the deployment branch.

If you are using a custom domain:

- Verify that you have the correct DNS records set up if you're using a custom domain. See [GitHub pages documentation on configuring custom domains](https://docs.github.com/en/pages/configuring-a-custom-domain-for-your-github-pages-site/about-custom-domains-and-github-pages). Also, please be aware that it may take up to 24 hours for DNS changes to propagate through the internet.

</details>

### 使用 Travis CI 觸發部署 {#triggering-deployment-with-travis-ci}

持續整合（CI）服務通常用於在每次新提交檢入原始碼控制時執行例行任務。這些任務可以是運行單元測試和整合測試、自動化構建、將套件發佈到 npm，以及將變更部署到您的網站。要自動化網站的部署，您只需在網站更新時調用 `yarn deploy` 腳本。以下章節說明如何使用 [Travis CI](https://travis-ci.com/)（一個流行的持續整合服務供應商）來實現此目的。

1. 前往 https://github.com/settings/tokens 並生成一個新的 [個人存取權杖](https://help.github.com/articles/creating-a-personal-access-token-for-the-command-line/)。創建權杖時，授予其 `repo` 權限範圍以確保其具備所需權限。
2. 使用您的 GitHub 帳戶，[添加 Travis CI 應用程式](https://github.com/marketplace/travis-ci) 到您要激活的儲存庫。
3. 開啟您的 Travis CI 儀表板（網址類似 `https://travis-ci.com/USERNAME/REPO`），並導航至儲存庫的 `更多選項 > 設定 > 環境變數` 部分。
4. 創建一個名為 `GH_TOKEN` 的新環境變數，其值為您新生成的權杖，接著創建 `GH_EMAIL`（您的電子郵件地址）和 `GH_NAME`（您的 GitHub 使用者名稱）。
5. 在儲存庫根目錄創建一個 `.travis.yml` 檔案，內容如下：

```yml title=".travis.yml"
language: node_js
node_js:
  - 18
branches:
  only:
    - main
cache:
  yarn: true
script:
  - git config --global user.name "${GH_NAME}"
  - git config --global user.email "${GH_EMAIL}"
  - echo "machine github.com login ${GH_NAME} password ${GH_TOKEN}" > ~/.netrc
  - yarn install
  - GIT_USER="${GH_NAME}" yarn deploy
```

現在，每當有新提交進入 `main` 分支時，Travis CI 將運行您的測試套件，如果一切通過，您的網站將透過 `yarn deploy` 腳本進行部署。

### 使用 Buddy 觸發部署 {#triggering-deployment-with-buddy}

[Buddy](https://buddy.works/) 是一個易於使用的 CI/CD 工具，可讓您自動將入口網站部署到不同環境，包括 GitHub Pages。

按照以下步驟創建一個管道，以便在您將變更推送到專案的選定分支時自動部署新版本的網站：

1. 前往 https://github.com/settings/tokens 生成新的[個人存取權杖](https://help.github.com/articles/creating-a-personal-access-token-for-the-command-line/)。建立權杖時，請授予其 `repo` 範圍以確保具備所需權限。
2. 登入您的 Buddy 帳戶並建立新專案。
3. 選擇 GitHub 作為 git 託管服務提供商，並選取包含網站代碼的儲存庫。
4. 使用左側導覽面板切換至 `Pipelines` 視圖。
5. 建立新管線。定義其名稱，將觸發模式設為 `On push`，並選取觸發管線執行的分支。
6. 新增 `Node.js` 動作。
7. 在動作的終端機中新增以下指令：

```bash
GIT_USER=<GH_PERSONAL_ACCESS_TOKEN>
git config --global user.email "<YOUR_GH_EMAIL>"
git config --global user.name "<YOUR_GH_USERNAME>"
yarn deploy
```

建立此簡單管線後，每次推送至您選定分支的新提交都會使用 `yarn deploy` 將網站部署至 GitHub Pages。閱讀[本指南](https://buddy.works/guides/react-docusaurus)以瞭解更多關於為 Docusaurus 設定 CI/CD 管線的資訊。

### 使用 Azure Pipelines {#using-azure-pipelines}

1. 若尚未註冊，請先於 [Azure Pipelines](https://azure.microsoft.com/en-us/services/devops/pipelines/) 註冊。
2. 建立組織。在組織內建立專案並從 GitHub 連接您的儲存庫。
3. 前往 https://github.com/settings/tokens 生成具有 `repo` 範圍的新[個人存取權杖](https://help.github.com/articles/creating-a-personal-access-token-for-the-command-line/)。
4. 在專案頁面（網址類似 `https://dev.azure.com/ORG_NAME/REPO_NAME/_build`）中，使用以下文字建立新管線。同時點擊編輯並新增名為 `GH_TOKEN` 的環境變數，其值為您新生成的權杖，接著新增 `GH_EMAIL`（您的電子郵件地址）和 `GH_NAME`（您的 GitHub 使用者名稱）。請確保將其標記為秘密。或者，您也可以在儲存庫根目錄新增名為 `azure-pipelines.yml` 的檔案。

```yml title="azure-pipelines.yml"
trigger:
  - main

pool:
  vmImage: ubuntu-latest

steps:
  - checkout: self
    persistCredentials: true

  - task: NodeTool@0
    inputs:
      versionSpec: '18'
    displayName: Install Node.js

  - script: |
      git config --global user.name "${GH_NAME}"
      git config --global user.email "${GH_EMAIL}"
      git checkout -b main
      echo "machine github.com login ${GH_NAME} password ${GH_TOKEN}" > ~/.netrc
      yarn install
      GIT_USER="${GH_NAME}" yarn deploy
    env:
      GH_NAME: $(GH_NAME)
      GH_EMAIL: $(GH_EMAIL)
      GH_TOKEN: $(GH_TOKEN)
    displayName: Install and build
```

### 使用 Drone {#using-drone}

1. 建立新的 SSH 金鑰作為專案的[部署金鑰](https://docs.github.com/en/free-pro-team@latest/developers/overview/managing-deploy-keys#deploy-keys)。
2. 為您的私鑰和公鑰命名，使其具有特定性且不會覆蓋其他[SSH 金鑰](https://docs.github.com/en/free-pro-team@latest/github/authenticating-to-github/generating-a-new-ssh-key-and-adding-it-to-the-ssh-agent)。
3. 前往 `https://github.com/USERNAME/REPO/settings/keys` 並新增部署金鑰，貼入您剛生成的公鑰。
4. 開啟您的 Drone.io 儀表板並登入。網址類似 `https://cloud.drone.io/USERNAME/REPO`。
5. 點擊儲存庫，點擊啟用儲存庫，並新增名為 `git_deploy_private_key` 的秘密，其值為您剛生成的私鑰。
6. 在儲存庫根目錄建立 `.drone.yml` 檔案，內容如下。

```yml title=".drone.yml"
kind: pipeline
type: docker
trigger:
  event:
    - tag
- name: Website
  image: node
  commands:
    - mkdir -p $HOME/.ssh
    - ssh-keyscan -t rsa github.com >> $HOME/.ssh/known_hosts
    - echo "$GITHUB_PRIVATE_KEY" > "$HOME/.ssh/id_rsa"
    - chmod 0600 $HOME/.ssh/id_rsa
    - cd website
    - yarn install
    - yarn deploy
  environment:
    USE_SSH: true
    GITHUB_PRIVATE_KEY:
      from_secret: git_deploy_private_key
```

現在，每當您推送新標籤至 GitHub 時，此觸發器將啟動 drone CI 作業以發佈您的網站。

## 部署至 Flightcontrol {#deploying-to-flightcontrol}

[Flightcontrol](https://www.flightcontrol.dev/?ref=docusaurus) 是一項服務，可直接從您的 Git 儲存庫自動建置並將網頁應用程式部署至 AWS Fargate。它讓您能夠完整檢視並進行基礎架構變更，不受傳統 PaaS 的限制。

按照 [Flightcontrol 的 Docusaurus 逐步指南](https://www.flightcontrol.dev/docs/reference/examples/docusaurus/?ref=docusaurus)開始使用。

## 部署至 Koyeb {#deploying-to-koyeb}

[Koyeb](https://www.koyeb.com) 是一個對開發者友善的無伺服器平台，可全球部署應用程式。該平台讓您無縫運行 Docker 容器、網路應用程式和 API，具備基於 Git 的部署、原生自動擴展、全球邊緣網路，以及內建的服務網格和服務發現功能。查看 [Koyeb 的 Docusaurus 部署指南](https://www.koyeb.com/tutorials/deploy-docusaurus-on-koyeb) 以開始使用。

## 部署到 Render {#deploying-to-render}

[Render](https://render.com) 提供 [免費的靜態網站託管服務](https://render.com/docs/static-sites)，包含全託管的 SSL、自訂網域、全球 CDN，以及從您的 Git 儲存庫自動持續部署。只需幾分鐘即可開始，請遵循 [Render 的 Docusaurus 部署指南](https://render.com/docs/deploy-docusaurus)。

## 部署到 Qovery {#deploying-to-qovery}

[Qovery](https://www.qovery.com) 是一個全託管的雲端平台，運行於您的 AWS、Digital Ocean 和 Scaleway 帳戶上，您可以在其中託管靜態網站、後端 API、資料庫、定時任務以及所有其他應用程式。

1. 創建一個 Qovery 帳戶。如果您還沒有帳戶，請訪問 [Qovery 儀表板](https://console.qovery.com) 創建一個。
2. 創建一個專案。
   - 點擊 **創建專案** 並為您的專案命名。
   - 點擊 **下一步**。
3. 創建一個新環境。
   - 點擊 **創建環境** 並為其命名（例如 staging、production）。
4. 添加一個應用程式。
   - 點擊 **創建應用程式**，為其命名並選擇您的 GitHub 或 GitLab 儲存庫，其中包含您的 Docusaurus 應用程式。
   - 定義主分支名稱和應用程式的根路徑。
   - 點擊 **創建**。應用程式創建後：
   - 導航至您的應用程式 **設定**
   - 選擇 **端口**
   - 添加您的 Docusaurus 應用程式使用的端口
5. 部署
   - 現在您只需導航至您的應用程式並點擊 **部署**。

![部署應用程式](https://hub.qovery.com/img/heroku/heroku-1.png)

就是這樣。查看狀態並等待應用程式部署完成。要在瀏覽器中打開應用程式，請在應用程式概覽中點擊 **操作** 和 **打開**。

## 部署到 Hostman {#deploying-to-hostman}

[Hostman](https://hostman.com/) 允許您免費託管靜態網站。Hostman 自動化一切，您只需連接您的儲存庫並遵循這些簡單步驟：

1. 建立服務。

   - 若要部署 Docusaurus 靜態網站，請在 [儀表板](https://dashboard.hostman.com/) 左上角點擊 **建立** 並選擇 **前端應用或靜態網站**。

2. 選擇要部署的專案。

   - 若您使用 GitHub、GitLab 或 Bitbucket 帳號登入 Hostman，您將看到包含私有專案在內的儲存庫。

   - 選擇您要部署的專案。該專案必須包含專案檔案所在的目錄（例如 `website`）。

   - 若要存取其他儲存庫，請點擊 **連接其他儲存庫**。

   - 若您未使用 Git 帳號憑證登入，此時可登入必要帳號後選擇專案。

3. 設定建置選項。

   - 接著會出現 **網站自訂** 視窗。從框架清單中選擇 **靜態網站** 選項。

   - **應用程式目錄** 指向建置後包含專案檔案的目錄。若您在步驟 2 選擇了包含網站內容（或 `my_website`）目錄的儲存庫，可留空此欄位。

   - Docusaurus 的標準建置指令為：

     ```bash npm2yarn
     npm run build
     ```

   - 可視需求修改建置指令。您可輸入多條以 `&&` 分隔的指令。

4. 部署。

   - 點擊 **部署** 開始建置流程。

   - 開始後將進入部署日誌。若程式碼有問題，日誌中會顯示警告或錯誤訊息說明原因。通常日誌會包含所有除錯所需的資料。

   - 部署完成後，您將收到電子郵件通知並在日誌中看到記錄。大功告成！您的專案已上線運作。

## 部署至 Surge {#deploying-to-surge}

Surge 是 [靜態網頁託管平台](https://surge.sh/help/getting-started-with-surge)，可讓您在數秒內從命令列部署 Docusaurus 專案。部署至 Surge 簡單且免費（包含自訂網域與 SSL 憑證）。

透過以下步驟，使用 surge 在數秒內部署您的應用：

1. 首先，使用 npm 安裝 Surge：
   ```bash npm2yarn
   npm install -g surge
   ```
2. 在專案根目錄執行以下指令，為生產環境建置靜態檔案：
   ```bash npm2yarn
   npm run build
   ```
3. 接著在專案根目錄執行此指令：
   ```bash
   surge build/
   ```

首次使用 Surge 時，系統會提示您從命令列建立帳號（僅需執行一次）。

確認要發佈的網站位於 `build` 目錄中。系統會自動產生 `*.surge.sh` 子網域（可編輯）。

### 使用自訂網域 {#using-your-domain}

若您擁有網域名稱，可使用以下指令部署網站：

```bash
surge build/ your-domain.com
```

您的網站現已免費部署於 `subdomain.surge.sh` 或 `your-domain.com`（依選擇方法而定）。

### 設定 CNAME 檔案 {#setting-up-cname-file}

透過以下指令將網域儲存於 CNAME 檔案中，供後續部署使用：

```bash
echo subdomain.surge.sh > CNAME
```

未來任何變更均可透過 `surge` 指令部署。

## 部署至 QuantCDN {#deploying-to-quantcdn}

1. 安裝 [Quant CLI](https://docs.quantcdn.io/docs/cli/get-started)
2. 透過 [註冊](https://dashboard.quantcdn.io/register) 建立 QuantCDN 帳號
3. 使用 `quant init` 初始化專案並填寫憑證：
   ```bash
   quant init
   ```
4. 部署您的網站。
   ```bash
   quant deploy
   ```

請參閱[文件](https://docs.quantcdn.io/docs/cli/continuous-integration)和[部落格](https://www.quantcdn.io/blog)以獲取更多部署至QuantCDN的範例與使用案例。

## 部署至Layer0 {#deploying-to-layer0}

[Layer0](https://www.layer0.co)是一個全方位平台，用於開發、部署、預覽、實驗、監控和運行無頭前端。它專注於大型動態網站，並透過EdgeJS（基於JavaScript的內容傳遞網絡）、預測性預取和性能監控提供頂級性能。Layer0提供免費方案。只需幾分鐘即可開始，請遵循[Layer0的Docusaurus部署指南](https://docs.layer0.co/guides/docusaurus)。

## 部署至Cloudflare Pages {#deploying-to-cloudflare-pages}

[Cloudflare Pages](https://pages.cloudflare.com/)是一個供前端開發者協作和部署網站的Jamstack平台。只需幾分鐘即可開始，請遵循[這篇文章](https://dev.to/apidev234/deploying-docusaurus-to-cloudflare-pages-565g)。

## 部署至Azure Static Web Apps {#deploying-to-azure-static-web-apps}

[Azure Static Web Apps](https://docs.microsoft.com/en-us/azure/static-web-apps/overview)是一項服務，可直接從代碼存儲庫自動構建和部署全棧Web應用至Azure，簡化了CI/CD的開發者體驗。Static Web Apps將Web應用的靜態資源與動態（API）端點分開。靜態資源從全球分佈的內容服務器提供，使客戶端能透過附近的服務器更快地檢索文件。動態API則使用基於事件的無服務器架構進行擴展，這種方法更具成本效益並能按需擴展。只需幾分鐘即可開始，請遵循[這份逐步指南](https://dev.to/azure/11-share-content-with-docusaurus-azure-static-web-apps-30hc)。

## 部署至Kinsta {#deploying-to-kinsta}

[Kinsta靜態網站託管](https://kinsta.com/static-site-hosting)讓您免費部署最多100個靜態網站，提供自定義域名與SSL、每月100 GB帶寬，以及260多個Cloudflare CDN位置。

只需點擊幾下即可開始，請遵循我們的[Kinsta上的Docusaurus](https://kinsta.com/docs/docusaurus-example/)文章。